<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.ActivityLogin">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/xcloud03" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_title"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/username_string"
                android:textAlignment="center"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/usernameRegistText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/password_string"
                android:textAlignment="center"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/passwordRegistText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/invite_code_string"
                android:textAlignment="center"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/codeRegistText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/registUserLayout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/regist_string"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>