<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.ActivityLogin">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/xcloud03" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_title"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/username_string"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/usernameLoginText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/password_string"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/passwordLoginText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/loginUserLayout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/login_string"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/back02"-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_height="30dp"-->
    <!--        android:layout_marginTop="50dp"-->
    <!--        android:layout_gravity="center_horizontal"-->
    <!--        android:gravity="center_vertical|center_horizontal"-->
    <!--        android:text="返回" />-->


</LinearLayout>