<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/xcloud02" />

                <LinearLayout
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="19dp"
                        app:srcCompat="@mipmap/xcloud01" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome01_string"
                        android:textAlignment="center"
                        android:textSize="9dp"
                        tools:ignore="RtlCompat" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome02_string"
                android:textSize="12dp"
                tools:ignore="RtlCompat" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/pc" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="16dp"
                android:layout_marginLeft="3dp"
                android:src="@mipmap/phone" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome03_string"
                android:textSize="10dp"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>