<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ActivityLogin">

    <ImageView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:src="@mipmap/xcloud03" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_title"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@mipmap/home02" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="bottom"
                app:srcCompat="@mipmap/home01" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@mipmap/home03" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@mipmap/home04" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_style"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/xcloud_white" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/title_login_string"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="top"
            android:text="@string/regist_string" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginLeft="4dp"
            android:src="@mipmap/regist_right" />
    </LinearLayout>


</LinearLayout>